# age-inbox

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: API.md  openapi.yaml
src/: api.rs  crypto.rs  main.rs
src/api/: config.rs  create_inbox.rs  delete.rs  delete_raw.rs  download.rs  download_raw.rs  list_files.rs  list_files_raw.rs  lock.rs  metadata.rs  mod.rs  types.rs  unlock.rs  upload.rs  validation.rs  vault_config.rs
tests/: create_inbox_tests.rs  crypto_tests.rs  delete_tests.rs  download_tests.rs  integration_tests.rs  list_tests.rs  ordered_endpoints_flow_tests.rs  raw_delete_tests.rs  raw_download_tests.rs  raw_list_tests.rs  router_contract_tests.rs  unlock_lock_tests.rs  upload_tests.rs
tests/common/: mod.rs
