[package]
name = "age-inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["multipart"] }
age = { version = "0.10", features = ["async"] }
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "compat"] }
bech32 = "0.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = { version = "0.14.7", features = ["pem"] }
clap = { version = "4.5.60", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
tempfile = "3.27.0"
